<resources>
    <string name="app_name">Dice Game</string>
    <string name="system_name">system:</string>
    <string name="player_name">player:</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="textview">Select a number from below: </string>
    <string name="displaydiceoutput_textview">Computer is rolling the dice…</string>
    <string name="computer_selection_final">Your score is</string>
</resources>
